# Minesweeper

./: CMakeLists.txt  README.md
include/game/: Cell.h  GameManager.cpp  GameManager.h
lib/pages/: home_page.dart
src/: main.cpp  test.cpp
src/game/: Board.cpp
ui/: README.md  pubspec.yaml
ui/ios/Runner.xcodeproj/: project.pbxproj
ui/lib/: main.dart
ui/lib/assets/fonts/Audiowide/: OFL.txt
ui/lib/components/: button.dart  cell_widget.dart  ffi.dart  glass_button.dart  grid.dart  grid_widget.dart  navigator.dart
ui/lib/pages/: game_page.dart  home_page.dart  rules_page.dart  settings_page.dart
ui/macos/Runner.xcodeproj/: project.pbxproj
ui/src/: CMakeLists.txt
ui/src/game/: Board.h  ffi_wrapper.cpp
ui/windows/: CMakeCache.txt
